--- a/frontend/src/pages/Login.module.css
+++ b/frontend/src/pages/Login.module.css
@@ -4,10 +4,14 @@ body {
   margin: 0;
   padding: 0;
   background-color: #f5f5f5;
-  overflow: hidden;
+  display: flex;
+  justify-content: center; /* Centraliza horizontalmente */
+  align-items: center;    /* Centraliza verticalmente */
+  min-height: 100vh;
   position: relative;
 }
 
+/* Neve */
 .snowflake {
   position: absolute;
   top: -10px;
@@ -41,19 +45,18 @@ body {
 /* Estilo do Contêiner */
 .login-container {
   display: flex;
-  justify-content: center;
-  align-items: center;
   flex-direction: column;
-  background-color: #fff;
-  padding: 40px;
-  box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.1);
-  border-radius: 10px;
-  position: relative;
+  align-items: center;
+  background-color: #ffffff; /* Fundo branco */
+  border-radius: 10px;       /* Bordas arredondadas */
+  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2); /* Sombra para destacar */
+  padding: 30px 20px;       /* Espaçamento interno */
   width: 100%;
-  max-width: 600px;
+  max-width: 400px;         /* Largura máxima do contêiner */
   text-align: center;
 }
 
+/* Título */
 h2 {
   font-size: 28px;
   color: #333;
@@ -83,6 +86,7 @@ h2 {
 .input-group {
   margin-bottom: 20px;
   text-align: left;
+  width: 100%;
 }
 
 .input-with-icon {
@@ -105,7 +109,7 @@ h2 {
   background-color: transparent;
 }
 
-/* Botões e Formulário */
+/* Botões */
 .submit-btn {
   width: 100%;
   padding: 14px;
